# nlp_course

./: .gitignore  README.md  pyproject.toml  requirements.txt
homework_1/: Homework_1.ipynb
homework_2/: Homework_2.ipynb
homework_3/: Homework_3_1.ipynb  Homework_3_2.ipynb
homework_4/: Homework_4.ipynb
homework_5/: Competition_training.ipynb  Homework_5.ipynb  location_predictor.py
homework_6/: Homework_6.ipynb
homework_8/: Homework_8.ipynb
homework_8/service/: Dockerfile  docker-compose.yaml  pyproject.toml
homework_8/service/src/: location_predictor.py  main.py
