[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["mykykh <49101849+mykykh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
